perbaikan topic, penambahan fitur untuk menampilkan dan menghapus topic

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_USER=root
-DB_PASSWORD=root
-DB_HOST=db-mysql
+DB_PASSWORD=
+DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=discussin_mobile
-APIPort=:8080
+DB_NAME=db_discussin
+APIPort=:8081
 APIKey=APIKey
 TokenSecret=HayolohMauNgapain
